# uv_python_template

./: init_repo.py  pyproject.toml
docs/: LICENSE
src/{package_name}/: __init__.py
